add product group feature and update README

--- a/pixel/head.html
+++ b/pixel/head.html
@@ -2,6 +2,7 @@
   window.appsetting_trustvox_storeId = "{{settings.storeId}}";
   window.appsetting_trustvox_staging = "{{settings.staging}}";
   window.appsetting_trustvox_colt = "{{settings.colt}}";
+  window.appsetting_trustvox_enableProductGroup = "{{settings.enableProductGroup}}";
 </script>
 
 <style type="text/css">
